Update GNU Radio and USRP to version 3.3.0. Added new ports for QtGUI, NOAA, MSDD6000. Renamed 'grc' to 'gnuradio companion', and now the 'grc' port just    prints a NOTE about this change. Added in support for Python 2.7.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71114 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/gnuradio/Portfile
+++ b/dports/science/gnuradio/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name			gnuradio
-version			3.2.2
-revision		1
+version         3.3.0
 maintainers		michaelld
 description		GNU Radio META-port installer.
 long_description GNU Radio META-port installer: \
@@ -13,21 +12,25 @@ Provides every installable package of GNU Radio using MacPorts. \
 This package does not do any compiling or installation itself.
 
 categories		science
-homepage		http://gnuradio.org/
+homepage        http://gnuradio.org/
 
 distfiles
 
 platforms		darwin macosx
 
-depends_lib		port:gnuradio-audio-jack \
+depends_lib		port:gnuradio-atsc \
+                port:gnuradio-audio-jack \
 				port:gnuradio-audio-osx \
 				port:gnuradio-audio-portaudio \
+				port:gnuradio-companion \
 				port:gnuradio-cvsd-vocoder \
 				port:gnuradio-examples \
 				port:gnuradio-gpio \
-				port:gnuradio-grc \
 				port:gnuradio-gsm-fr-vocoder \
+				port:gnuradio-msdd6000 \
+				port:gnuradio-noaa \
 				port:gnuradio-pager \
+				port:gnuradio-qtgui \
 				port:gnuradio-radar-mono \
 				port:gnuradio-radio-astronomy \
 				port:gnuradio-sounder \
@@ -54,17 +57,27 @@ if { ![variant_isset docs] } {
 	configure.args-append --disable-doxygen --disable-docs
 }
 
-variant python25 conflicts python26 description "Use Python 2.5" {
-	configure.env PYTHON=${prefix}/bin/python2.5
-	depends_lib-append	port:python25
+variant python25 conflicts python26 python27 \
+description "Use Python 2.5" {
+	configure.env      PYTHON=${prefix}/bin/python2.5
+	depends_lib-append port:python25
 }
 
-variant python26 conflicts python25 description "Use Python 2.6" {
-	configure.env PYTHON=${prefix}/bin/python2.6
-	depends_lib-append	port:python26
+variant python26 conflicts python25 python27 \
+description "Use Python 2.6" {
+	configure.env      PYTHON=${prefix}/bin/python2.6
+	depends_lib-append port:python26
 }
 
-if { ![variant_isset python25] && ![variant_isset python26] } {
+variant python27 conflicts python25 python26 \
+description "Use Python 2.7" {
+	configure.env      PYTHON=${prefix}/bin/python2.7
+	depends_lib-append port:python27
+}
+
+if { ![variant_isset python25] && \
+     ![variant_isset python26] && \
+     ![variant_isset python27] } {
 	default_variants +python26
 }
 
