--- a/dports/science/gnuradio-companion/Portfile
+++ b/dports/science/gnuradio-companion/Portfile
@@ -2,15 +2,14 @@
 # $Id$
 
 PortSystem 1.0
-PortGroup muniversal 1.0
-PortGroup archcheck 1.0
 
-name			gnuradio-pager
+name			gnuradio-companion
 version			3.3.0
 maintainers		michaelld
-description		Pager Component of GNU Radio.
-long_description Pager Component of GNU Radio: \
-Provides FLEX radio-pager receiver / demodulator block.
+description		GRC component of GNU Radio.
+long_description GRC component of GNU Radio: \
+GNU Radio Companion (GRC): Graphical interface to editing, \
+creating, and running applications which use GNU Radio.
 
 categories		science
 homepage        http://gnuradio.org/
@@ -29,14 +28,13 @@ checksums		md5		cef9ef65d626e1273c6381966ae9d4bc \
 				sha1	41d5c177b173ce73404f5fe539b013c82600f73f \
 				rmd160	ae83bd8a93deaf73d730e2af0d05c9ffc4c98520
 
-depends_lib		port:gnuradio-core
-
-archcheck.files lib/libgnuradio-core.dylib
+depends_lib		port:gnuradio-wxgui
 
 configure.args	--disable-all-components \
 				--with-gruel \
 				--with-gnuradio-core \
-				--enable-gr-pager
+				--with-gr-wxgui \
+				--enable-grc
 
 use_parallel_build	yes
 
@@ -52,19 +50,28 @@ if { ![variant_isset docs] } {
 variant python25 conflicts python26 python27 \
 description "Use Python 2.5" {
 	configure.env      PYTHON=${prefix}/bin/python2.5
-	depends_lib-append port:python25
+	depends_lib-append port:python25 \
+					   port:py25-lxml \
+					   port:py25-cheetah \
+					   port:py25-gtk
 }
 
 variant python26 conflicts python25 python27 \
 description "Use Python 2.6" {
 	configure.env      PYTHON=${prefix}/bin/python2.6
-	depends_lib-append port:python26
+	depends_lib-append port:python26 \
+					   port:py26-lxml \
+					   port:py26-cheetah \
+				   	   port:py26-gtk
 }
 
 variant python27 conflicts python25 python26 \
 description "Use Python 2.7" {
 	configure.env      PYTHON=${prefix}/bin/python2.7
-	depends_lib-append port:python27
+	depends_lib-append port:python27 \
+					   port:py27-lxml \
+					   port:py27-cheetah \
+				   	   port:py27-gtk
 }
 
 if { ![variant_isset python25] && \
