--- a/dports/science/gnuradio-grc/Portfile
+++ b/dports/science/gnuradio-grc/Portfile
@@ -1,73 +1,27 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:filetype=tcl:et:sw=4:ts=4:sts=4
-# $Id$
+# $Id: Portfile 63573 2010-02-09 04:11:14Z michaelld@macports.org $
 
 PortSystem 1.0
 
 name			gnuradio-grc
 version			3.2.2
-revision		1
-maintainers		nomaintainer
+revision        2
+maintainers		michaelld
 description		GRC component of GNU Radio.
 long_description GRC component of GNU Radio: \
 GNU Radio Companion (GRC): Graphical interface to editing, \
 creating, and running applications which use GNU Radio.
 
 categories		science
-homepage		http://gnuradio.org/trac
+homepage        http://gnuradio.org/
 
-# all GNU Radio components come in a single tarball.
-# Reuse this tarball for each Port
-
-dist_subdir		gnuradio
-master_sites.mirror_subdir gnuradio
-distname		gnuradio-${version}
-master_sites	gnu
+distfiles
 
 platforms		darwin macosx
 
-checksums		md5		3fedcd64c2f51671cc1417b4c1e06834 \
-				sha1	6177d13e42937383e622edadc0b9f06391d0e5fc \
-				rmd160	42d1a496400ebc77e054f59d9f33cc8ba24a4234
+use_configure	no
+build			{}
+destroot		{}
 
-depends_lib		port:gnuradio-wxgui
-
-# version 3.2.2 requires this; next version won't
-patchfiles		patch-configure.diff
-
-configure.args	--disable-all-components \
-				--with-omnithread \
-				--with-gruel \
-				--with-gnuradio-core \
-				--with-gr-wxgui \
-				--enable-grc
-
-use_parallel_build	yes
-
-variant docs description "build documentation for ${name}" {
-	configure.args-append --enable-doxygen --enable-docs
-	depends_lib-append port:doxygen
-}
-
-if { ![variant_isset docs] } {
-	configure.args-append --disable-doxygen --disable-docs
-}
-
-variant python25 conflicts python26 description "Use Python 2.5" {
-	configure.env PYTHON=${prefix}/bin/python2.5
-	depends_lib-append	port:python25 \
-						port:py25-lxml \
-						port:py25-cheetah \
-						port:py25-gtk
-}
-
-variant python26 conflicts python25 description "Use Python 2.6" {
-	configure.env PYTHON=${prefix}/bin/python2.6
-	depends_lib-append	port:python26 \
-						port:py26-lxml \
-						port:py26-cheetah \
-						port:py26-gtk
-}
-
-if { ![variant_isset python25] && ![variant_isset python26] } {
-	default_variants +python26
-}
+notes "This port has been renamed to 'gnuradio-companion'; \n\
+please uninstall this port and install that one."
