--- a/dports/science/gnuradio-msdd6000/Portfile
+++ b/dports/science/gnuradio-msdd6000/Portfile
@@ -1,16 +1,16 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:filetype=tcl:et:sw=4:ts=4:sts=4
-# $Id$
+# $Id: Portfile 63573 2010-02-09 04:11:14Z michaelld@macports.org $
 
 PortSystem 1.0
 PortGroup muniversal 1.0
 PortGroup archcheck 1.0
 
-name			gnuradio-pager
+name			gnuradio-msdd6000
 version			3.3.0
 maintainers		michaelld
-description		Pager Component of GNU Radio.
-long_description Pager Component of GNU Radio: \
-Provides FLEX radio-pager receiver / demodulator block.
+description		MSDD6000 Component of GNU Radio.
+long_description MSDD6000 Component of GNU Radio: \
+Provides an interface block between the Softronics MSDD6000 and GNU Radio.
 
 categories		science
 homepage        http://gnuradio.org/
@@ -36,7 +36,7 @@ archcheck.files lib/libgnuradio-core.dylib
 configure.args	--disable-all-components \
 				--with-gruel \
 				--with-gnuradio-core \
-				--enable-gr-pager
+				--enable-gr-msdd6000
 
 use_parallel_build	yes
 
