--- a/dports/science/gnuradio-noaa/Portfile
+++ b/dports/science/gnuradio-noaa/Portfile
@@ -1,16 +1,16 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:filetype=tcl:et:sw=4:ts=4:sts=4
-# $Id$
+# $Id: Portfile 63573 2010-02-09 04:11:14Z michaelld@macports.org $
 
 PortSystem 1.0
 PortGroup muniversal 1.0
 PortGroup archcheck 1.0
 
-name			gnuradio-pager
+name			gnuradio-noaa
 version			3.3.0
 maintainers		michaelld
-description		Pager Component of GNU Radio.
-long_description Pager Component of GNU Radio: \
-Provides FLEX radio-pager receiver / demodulator block.
+description		NOAA Component of GNU Radio.
+long_description NOAA Component of GNU Radio: \
+Provides a NOAA POES HRPT receiver / demodulator block.
 
 categories		science
 homepage        http://gnuradio.org/
@@ -29,14 +29,18 @@ checksums		md5		cef9ef65d626e1273c6381966ae9d4bc \
 				sha1	41d5c177b173ce73404f5fe539b013c82600f73f \
 				rmd160	ae83bd8a93deaf73d730e2af0d05c9ffc4c98520
 
-depends_lib		port:gnuradio-core
+depends_lib		port:gnuradio-wxgui \
+                port:gnuradio-companion
 
-archcheck.files lib/libgnuradio-core.dylib
+archcheck.files lib/libgruel.dylib \
+                lib/libgnuradio-core.dylib
 
 configure.args	--disable-all-components \
 				--with-gruel \
 				--with-gnuradio-core \
-				--enable-gr-pager
+				--with-gr-wxgui \
+				--with-grc \
+				--enable-gr-noaa
 
 use_parallel_build	yes
 
