--- a/dports/science/gnuradio-utils/Portfile
+++ b/dports/science/gnuradio-utils/Portfile
@@ -4,15 +4,14 @@
 PortSystem 1.0
 
 name			gnuradio-utils
-version			3.2.2
-revision		1
+version         3.3.0
 maintainers		michaelld
 description		GR Utils component of GNU Radio.
 long_description GR Utils component of GNU Radio: \
 Python-based scripts for plotting and USRP functions.
 
 categories		science
-homepage		http://gnuradio.org
+homepage        http://gnuradio.org/
 
 # all GNU Radio components come in a single tarball.
 # Reuse this tarball for each Port
@@ -24,18 +23,14 @@ master_sites	gnu
 
 platforms		darwin macosx
 
-checksums		md5		3fedcd64c2f51671cc1417b4c1e06834 \
-				sha1	6177d13e42937383e622edadc0b9f06391d0e5fc \
-				rmd160	42d1a496400ebc77e054f59d9f33cc8ba24a4234
+checksums		md5		cef9ef65d626e1273c6381966ae9d4bc \
+				sha1	41d5c177b173ce73404f5fe539b013c82600f73f \
+				rmd160	ae83bd8a93deaf73d730e2af0d05c9ffc4c98520
 
 depends_lib		port:gnuradio-wxgui \
 				port:usrp
 
-# version 3.2.2 requires this; next version won't
-patchfiles		patch-configure.diff
-
 configure.args	--disable-all-components \
-				--with-omnithread \
 				--with-gruel \
 				--with-gnuradio-core \
 				--with-gr-wxgui \
@@ -53,16 +48,26 @@ if { ![variant_isset docs] } {
 	configure.args-append --disable-doxygen --disable-docs
 }
 
-variant python25 conflicts python26 description "Use Python 2.5" {
-	configure.env PYTHON=${prefix}/bin/python2.5
-	depends_lib-append	port:python25
+variant python25 conflicts python26 python27 \
+description "Use Python 2.5" {
+	configure.env      PYTHON=${prefix}/bin/python2.5
+	depends_lib-append port:python25
 }
 
-variant python26 conflicts python25 description "Use Python 2.6" {
-	configure.env PYTHON=${prefix}/bin/python2.6
-	depends_lib-append	port:python26
+variant python26 conflicts python25 python27 \
+description "Use Python 2.6" {
+	configure.env      PYTHON=${prefix}/bin/python2.6
+	depends_lib-append port:python26
 }
 
-if { ![variant_isset python25] && ![variant_isset python26] } {
+variant python27 conflicts python25 python26 \
+description "Use Python 2.7" {
+	configure.env      PYTHON=${prefix}/bin/python2.7
+	depends_lib-append port:python27
+}
+
+if { ![variant_isset python25] && \
+     ![variant_isset python26] && \
+     ![variant_isset python27] } {
 	default_variants +python26
 }
