--- a/dports/science/gnuradio-wxgui/Portfile
+++ b/dports/science/gnuradio-wxgui/Portfile
@@ -4,15 +4,14 @@
 PortSystem 1.0
 
 name			gnuradio-wxgui
-version			3.2.2
-revision		1
+version         3.3.0
 maintainers		michaelld
 description		WX GUI component of GNU Radio.
 long_description WX GUI component of GNU Radio: \
 Wx-based GUI widgets, including OpenGL option.
 
 categories		science
-homepage		http://gnuradio.org
+homepage        http://gnuradio.org/
 
 # all GNU Radio components come in a single tarball.
 # Reuse this tarball for each Port
@@ -24,17 +23,13 @@ master_sites	gnu
 
 platforms		darwin macosx
 
-checksums		md5		3fedcd64c2f51671cc1417b4c1e06834 \
-				sha1	6177d13e42937383e622edadc0b9f06391d0e5fc \
-				rmd160	42d1a496400ebc77e054f59d9f33cc8ba24a4234
+checksums		md5		cef9ef65d626e1273c6381966ae9d4bc \
+				sha1	41d5c177b173ce73404f5fe539b013c82600f73f \
+				rmd160	ae83bd8a93deaf73d730e2af0d05c9ffc4c98520
 
 depends_lib		port:gnuradio-core
 
-# version 3.2.2 requires this; next version won't
-patchfiles		patch-configure.diff
-
 configure.args	--disable-all-components \
-				--with-omnithread \
 				--with-gruel \
 				--with-gnuradio-core \
 				--enable-gr-wxgui
@@ -50,7 +45,8 @@ if { ![variant_isset docs] } {
 	configure.args-append --disable-doxygen --disable-docs
 }
 
-variant python25 conflicts python26 description "Use Python 2.5" {
+variant python25 conflicts python26 python27 \
+description "Use Python 2.5" {
 	configure.env PYTHON=${prefix}/bin/python2.5
 	depends_lib-append	port:python25 \
 						port:py25-wxpython \
@@ -58,7 +54,8 @@ variant python25 conflicts python26 description "Use Python 2.5" {
 						port:py25-opengl
 }
 
-variant python26 conflicts python25 description "Use Python 2.6" {
+variant python26 conflicts python25 python27 \
+description "Use Python 2.6" {
 	configure.env PYTHON=${prefix}/bin/python2.6
 	depends_lib-append	port:python26 \
 						port:py26-wxpython \
@@ -66,6 +63,17 @@ variant python26 conflicts python25 description "Use Python 2.6" {
 						port:py26-opengl
 }
 
-if { ![variant_isset python25] && ![variant_isset python26] } {
+variant python27 conflicts python25 python26 \
+description "Use Python 2.7" {
+	configure.env PYTHON=${prefix}/bin/python2.7
+	depends_lib-append	port:python27 \
+						port:py27-wxpython \
+						port:py27-numpy \
+						port:py27-opengl
+}
+
+if { ![variant_isset python25] && \
+     ![variant_isset python26] && \
+     ![variant_isset python27] } {
 	default_variants +python26
 }
