--- a/dports/science/usrp/Portfile
+++ b/dports/science/usrp/Portfile
@@ -6,14 +6,13 @@ PortGroup muniversal 1.0
 PortGroup archcheck 1.0
 
 name			usrp
-version			3.2.2
-revision		1
+version         3.3.0
 maintainers		michaelld
 description		USRP user-space driver / interface via USB.
 long_description USRP user-space driver / interface via USB.
 
 categories		science
-homepage		http://gnuradio.org
+homepage        http://gnuradio.org/
 
 # all GNU Radio components come in a single tarball.
 # Reuse this tarball for each Port
@@ -25,31 +24,15 @@ master_sites	gnu
 
 platforms		darwin macosx
 
-checksums		md5		3fedcd64c2f51671cc1417b4c1e06834 \
-				sha1	6177d13e42937383e622edadc0b9f06391d0e5fc \
-				rmd160	42d1a496400ebc77e054f59d9f33cc8ba24a4234
+checksums       md5     cef9ef65d626e1273c6381966ae9d4bc \
+                sha1    41d5c177b173ce73404f5fe539b013c82600f73f \
+                rmd160  ae83bd8a93deaf73d730e2af0d05c9ffc4c98520
 
-depends_build	port:sdcc
-
-depends_lib		port:gnuradio-omnithread \
-				port:libusb-legacy
-
-archcheck.files lib/libgromnithread.dylib \
-				lib/libusb-legacy/libusb.dylib
-
-# version 3.2.2 requires these; next version won't
-patchfiles		patch-configure.diff \
-				patch-usrp_host_lib_legacy_Makefile.in.diff \
-				patch-usrp_host_apps_Makefile.in.diff \
-				patch-usrp_host_lib_legacy_circular_linked_list.h.diff \
-				patch-usrp_host_lib_legacy_ciurcular_buffer.h.diff \
-				patch-usrp_host_lib_legacy_darwin.h.diff \
-				patch-usrp_host_lib_legacy_fusb_darwin.cc.diff \
-				patch-usrp_host_lib_legacy_fusb_darwin.h.diff \
-				patch-usrp_usrp.pc.in.diff
+depends_build	port:gnuradio-gruel \
+                port:sdcc
 
 configure.args	--disable-all-components \
-				--with-omnithread \
+				--with-gruel \
 				--enable-usrp
 
 use_parallel_build	yes
@@ -63,16 +46,51 @@ if { ![variant_isset docs] } {
 	configure.args-append --disable-doxygen --disable-docs
 }
 
-variant python25 conflicts python26 description "Use Python 2.5" {
-	configure.env PYTHON=${prefix}/bin/python2.5
-	depends_lib-append	port:python25
+variant python25 conflicts python26 python27 \
+description "Use Python 2.5" {
+    configure.env      PYTHON=${prefix}/bin/python2.5
+    depends_lib-append port:python25
 }
 
-variant python26 conflicts python25 description "Use Python 2.6" {
-	configure.env PYTHON=${prefix}/bin/python2.6
-	depends_lib-append	port:python26
+variant python26 conflicts python25 python27 \
+description "Use Python 2.6" {
+    configure.env      PYTHON=${prefix}/bin/python2.6
+    depends_lib-append port:python26
 }
 
-if { ![variant_isset python25] && ![variant_isset python26] } {
-	default_variants +python26
+variant python27 conflicts python25 python26 \
+description "Use Python 2.7" {
+    configure.env      PYTHON=${prefix}/bin/python2.7
+    depends_lib-append port:python27
+}
+
+if { ![variant_isset python25] && \
+     ![variant_isset python26] && \
+     ![variant_isset python27] } {
+    default_variants +python26
+}
+
+variant libusb-legacy \
+description "Use LIBUSB legacy version for USB transport" {
+    depends_lib-append     port:libusb-legacy
+    archcheck.files-append [exec find ${prefix}/lib/libusb-legacy \
+                                -name "libusb*.dylib" -type f | \
+                                grep -v pp | \
+                                sed -e "s@${prefix}/@@g"]
+
+    # fix LIBUSB search to include 'usb_debug' symbol, so-as
+    # to avoid using the 'compat' library.
+    patchfiles      patch-configure-libusb.diff
+}
+
+variant libusb-1 \
+description "Use LIBUSB version 1.0 for USB transport" {
+    depends_lib-append     port:libusb
+    archcheck.files-append lib/libusb-1.0.dylib
+    configure.args-append  --with-fusb-tech=libusb1
+}
+
+if { ![variant_isset libusb-legacy] && \
+     ![variant_isset libusb-1] } {
+    default_variants +libusb-legacy
 }
