Add NOTE about the renaming of this port.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71115 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/gnuradio-grc/Portfile
+++ b/dports/science/gnuradio-grc/Portfile
@@ -10,7 +10,9 @@ maintainers		michaelld
 description		GRC component of GNU Radio.
 long_description GRC component of GNU Radio: \
 GNU Radio Companion (GRC): Graphical interface to editing, \
-creating, and running applications which use GNU Radio.
+creating, and running applications which use GNU Radio.\n\n\
+NOTE: This port has been renamed to 'gnuradio-companion'\; \
+please uninstall this port and install that one.\n
 
 categories		science
 homepage        http://gnuradio.org/
@@ -23,5 +25,8 @@ use_configure	no
 build			{}
 destroot		{}
 
-notes "This port has been renamed to 'gnuradio-companion'; \n\
-please uninstall this port and install that one."
+pre-extract {
+    ui_msg "\n\
+NOTE: This port has been renamed to 'gnuradio-companion'\; \n\
+please uninstall this port and install that one.\n"
+}
