* Port 'fltk' is 32-bit only, so remove it from the primary 'depends_lib" and include it after checking for $build_arch to make sure it's a 32-bit build (i386 or ppc). * Augmented 'debug' variant to produce more info and not optimize.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71116 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/octave-devel/Portfile
+++ b/dports/math/octave-devel/Portfile
@@ -39,7 +39,6 @@ depends_lib         port:arpack \
                     port:curl \
                     port:fftw-3 \
                     port:fftw-3-single \
-                    port:fltk \
                     port:ftgl \
                     port:ghostscript \
                     port:glpk \
@@ -55,9 +54,15 @@ depends_lib         port:arpack \
                     port:qrupdate \
                     port:SuiteSparse
 
-# allow non-Apple compilers to work with FLTK by removing the -arch
-# flag, which means this port cannot easy compile as universal.
-patchfiles          patch-configure.diff
+if {${build_arch} == "i386" || ${build_arch} == "ppc"} {
+    # FLTK is not 64-bit yet; use it only for 32-bit installs
+    depends_lib-append port:fltk
+
+    # allow non-Apple compilers to work with FLTK by removing the
+    # -arch flag, which means this port cannot easy compile as
+    # universal.
+    patchfiles patch-configure.diff
+}
 
 universal_variant   no
 
@@ -155,10 +160,18 @@ variant x11 description {Enable use of X11} {
 }
 
 variant debug description {Produce debugging information in compiled code} {
-    configure.cflags-append    -g
-    configure.cxxflags-append  -g
-    configure.fflags-append    -g
-    configure.objcflags-append -g
+    configure.cflags-delete    -O2
+    configure.cxxflags-delete  -O2
+    configure.fflags-delete    -O2
+    configure.fcflags-delete   -O2
+    configure.f90flags-delete  -O2
+    configure.objcflags-delete -O2
+    configure.cflags-append    -g3 -O0
+    configure.cxxflags-append  -g3 -O0
+    configure.fcflags-append   -g3 -O0
+    configure.f90flags-append  -g3 -O0
+    configure.fflags-append    -g3 -O0
+    configure.objcflags-append -g3 -O0
 }
 
 livecheck.type      regex
