Added variant 'gcc45'.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71118 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/qrupdate/Portfile
+++ b/dports/math/qrupdate/Portfile
@@ -73,7 +73,7 @@ variant no_atlas description {build with Accelerate framework instead of atlas} 
 
 variant accelerate requires no_atlas description {compatibility variant} {}
 
-variant g95 conflicts gcc43 gcc44 universal description {build with g95} {
+variant g95 conflicts gcc43 gcc44 gcc45 universal description {build with g95} {
     depends_build-append    port:g95
     post-patch {
         reinplace "s|Makeconf|Makeconf.g95|" ${worksrcpath}/Makefile
@@ -81,21 +81,29 @@ variant g95 conflicts gcc43 gcc44 universal description {build with g95} {
     }
 }
 
-variant gcc43 conflicts g95 gcc44 universal description {build with gcc43 fortran} {
+variant gcc43 conflicts g95 gcc44 gcc45 universal description {build with gcc43 fortran} {
     depends_lib-append    port:gcc43
     post-patch {
         reinplace "s|gfortran|gfortran-mp-4.3|" ${worksrcpath}/Makeconf
     }
 }
 
-variant gcc44 conflicts g95 gcc43 description {build with gcc44 fortran} {
+variant gcc44 conflicts g95 gcc43 gcc45 description {build with gcc44 fortran} {
     depends_lib-append    port:gcc44
     post-patch {
         reinplace "s|gfortran|gfortran-mp-4.4|" ${worksrcpath}/Makeconf
     }
 }
 
-if {![variant_isset gcc43] && ![variant_isset gcc44] && ![variant_isset g95]} {
+variant gcc45 conflicts g95 gcc43 gcc44 description {build with gcc45 fortran} {
+    depends_lib-append    port:gcc45
+    post-patch {
+        reinplace "s|gfortran|gfortran-mp-4.5|" ${worksrcpath}/Makeconf
+    }
+}
+
+if {![variant_isset gcc43] && ![variant_isset gcc44] && \
+        ![variant_isset gcc45] && ![variant_isset g95]} {
     default_variants +gcc44
 }
 
