--- a/dports/textproc/bibledit/Portfile
+++ b/dports/textproc/bibledit/Portfile
@@ -3,7 +3,7 @@
 PortSystem        1.0
 
 name              bibledit
-version           4.0
+version           4.1
 categories        textproc
 maintainers       nomaintainer
 platforms         darwin
@@ -17,10 +17,9 @@ long_description  Bibledit is a USFM text editor that works in Linux or Mac OS X
 		  books that contain chapters that contain verses.
 
 homepage          http://www.nongnu.org/bibledit/
-master_sites	  http://download.savannah.gnu.org/releases/bibledit/source/ \
-                  http://download.savannah.gnu.org/releases-noredirect/bibledit/source/
+master_sites	  http://download.savannah.gnu.org/releases/bibledit/source/gtk/
 
-checksums 	md5 60af1f37c9c5716c61de8dd75f90566a
+checksums 	md5 2838907ce1b0ef243a90b7399e750917
 
 depends_lib	port:gtk2  \
 		port:libgtkhtml3 \
@@ -28,4 +27,9 @@ depends_lib	port:gtk2  \
 		port:git-core \
 		port:enchant \
 		port:nspr \
-		port:gtksourceview2
+		port:gtksourceview2 \
+		port:libsoup \
+		port:webkit-gtk
+
+distname                        ${name}-gtk-${version}
+worksrcdir                      ${name}-gtk-${version}
