telepathy-glib: update to version 0.11.14, fix python configuration.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71121 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/telepathy-glib/Portfile
+++ b/dports/comms/telepathy-glib/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            telepathy-glib
-version         0.11.13
+version         0.11.14
 description     The ${name} component of Telepathy - a Flexible Communications Framework.
 long_description \
                 The ${name} component of Telepathy - a Flexible Communications Framework. \
@@ -18,9 +18,9 @@ platforms       darwin
 homepage        http://telepathy.freedesktop.org/wiki
 master_sites    http://telepathy.freedesktop.org/releases/${name}/
 
-checksums       md5     ae1fadb748b607f5e3493b54bd908b1f \
-                sha1    f961b5a8e42a554e0c5e3262a744622f1726ee0b \
-                rmd160  e118c330185d9b10961f06a0273d031642c3cc27
+checksums       md5     dfabe464b82158105257ec8f2048d9db \
+                sha1    b929163263cc2353d6bf336dcc219ea2619d8371 \
+                rmd160  cd63f0962443066a8c34dd3f78d1612e83321173
 
 depends_build   port:pkgconfig \
                 port:gnome-doc-utils \
@@ -28,6 +28,8 @@ depends_build   port:pkgconfig \
                 port:python26
 
 depends_lib     port:dbus-glib
+
+patchfiles      patch-configure.diff
 
 configure.python ${prefix}/bin/python2.6
 
