gnome-media: update to version 2.30.0.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71122 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-media/Portfile
+++ b/dports/gnome/gnome-media/Portfile
@@ -4,8 +4,7 @@
 PortSystem      1.0
 
 name            gnome-media
-version         2.26.0
-revision        1
+version         2.30.0
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     A collection of utilities for simple multimedia handling.
 long_description	\
@@ -18,9 +17,9 @@ platforms       darwin
 homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     3d519bc7d812aed8f6e4288b6d3cdf26 \
-                sha1    23ec588fdf5df3eef542278952fe78ed032d354a \
-                rmd160  0720cf0394148d8dc3cf6423a8b817a70f1486ed
+checksums       md5     027b11fb8b126ab1b25def6b9e121bd3 \
+                sha1    c077f1c0a4ef97908c7bb36e41477c77069fdcd0 \
+                rmd160  9ba6f6fdc25afa34072e80ca4102800d7d75e2bc
 
 use_bzip2       yes
 
@@ -29,17 +28,23 @@ depends_build	port:pkgconfig \
 
 depends_lib     port:libcanberra \
                 port:libunique \
-                port:libgnomeui \
+                port:gconf \
                 port:gst-plugins-base
 
+configure.args  --disable-schemas-install \
+                --disable-scrollkeeper \
+                --disable-pulseaudio \
+                --disable-gstmix
+
 variant deprecated description {Enable deprecated functionality} {
-        configure.args-append --enable-vumeter \
-                              --enable-cddbslave
-#
-#  this is untested and may not work
-#
-#                              --enable-gnomecd
-#        depends_lib-append port:nautilus-cd-burner
+        configure.args-delete --disable-gstmix
+        configure.args-append --enable-gstmix
+}
+
+post-activate {
+    system "${prefix}/bin/scrollkeeper-update"
+    system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+        gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
 
 livecheck.type  regex
