bug-buddy: update to version 2.30.0, add eds_mail variant.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71123 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/bug-buddy/Portfile
+++ b/dports/gnome/bug-buddy/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		bug-buddy
-version		2.26.0
+version		2.30.0
 set branch  [join [lrange [split ${version} .] 0 1] .]
 description	A graphical bug reporting tool.
 long_description        This is a graphical bug reporting tool. It can \
@@ -16,22 +16,44 @@ platforms	darwin
 homepage	http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     f92663a1a819f83e3eb3004f9e8a687a \
-                sha1    6b96ea35d58b969fe0129af2bfb4aa144c207e6d \
-                rmd160  51dac975a5752c910928ddf07bab3bc9c0225649
+checksums       md5     da34ace8a806cd1c901ae960184e2997 \
+                sha1    8e4c3b783ffb51e459598da33007741d6cefaa64 \
+                rmd160  4ff2a458167ad0f999a5636281d5df76802e0bd8
 
-depends_lib     port:libelf \
-		port:gnome-desktop \
-		port:gnome-menus \
-		port:evolution-data-server \
-		port:libgtop
+depends_build   port:pkgconfig \
+                port:intltool \
+                port:gnome-doc-utils
+
+depends_lib     port:gconf \
+                port:libelf \
+		port:libbonobo \
+                port:libsoup \
+                port:libgtop
 
 use_bzip2 	yes
 
-configure.args	--mandir=${prefix}/share/man --disable-scrollkeeper
+#
+# evolution-data-server is not universal
+#
+
+if {[variant_isset eds_mail]} {
+    universal_variant no
+}
+
+configure.args	--disable-scrollkeeper \
+                --disable-schemas-install \
+                --disable-google-breakpad \
+                --disable-eds
+
+variant eds_mail description {Enable getting user email from evolution data server} {
+                depends_lib-append port:evolution-data-server
+                configure.args-delete --disable-eds
+}
 
 post-activate {
 	system "${prefix}/bin/scrollkeeper-update"
+        system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+            gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
 
 livecheck.type  regex
