gnome-control-center: update to version 2.30.1.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71124 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-control-center/Portfile
+++ b/dports/gnome/gnome-control-center/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name		gnome-control-center
-version		2.26.0
-revision        1
+version		2.30.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	Control center for GNOME 2.0 project.
 long_description        ${description}
@@ -16,17 +15,18 @@ homepage	http://www.gnome.org/
 
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     eed8feccc37712e34d88bd3b20e46962 \
-                sha1    4730780aaab599869a2dfe2d72d68dd54bb77058 \
-                rmd160  d22c75b21d63bad9321ad1221e442f381da8dd35
+checksums       md5     9608eae5605cfc478ba35b683bf129c1 \
+                sha1    f7d3f486e114871e53f3d7e743d53b041ebf2f1e \
+                rmd160  7323a59deb13a8017de4e9f6ee8499fad6b6d7aa
 
 depends_lib	port:metacity \
 	        port:nautilus \
-	        port:libcanberra \
 	        port:gnome-panel \
-	        port:gnome-settings-daemon
+	        port:gnome-settings-daemon \
+                port:xorg-libXScrnSaver
 
-depends_build	port:gnome-doc-utils
+depends_build	port:intltool \
+                port:gnome-doc-utils
 
 if {${os.platform} == "darwin" && ${os.major} < 9} {
     patchfiles      patch-libslab-director-tile.c.diff
@@ -38,7 +38,6 @@ configure.args	\
 		--mandir=${prefix}/share/man \
 		--x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib \
-                --disable-hal \
 		--disable-scrollkeeper \
 		--disable-update-mimedb \
 		--disable-schemas-install
@@ -48,6 +47,12 @@ post-patch {
 		${worksrcpath}/capplets/common/gnome-theme-info.c \
 		${worksrcpath}/libwindow-settings/metacity-window-manager.c
 }
+
+#
+# port metacity is not universal
+#
+
+universal_variant no
 
 post-destroot	{
 	file delete ${destroot}${prefix}/etc/gconf/schemas/desktop_gnome_peripherals_keyboard_xkb.schemas
