gmime: update to version 2.4.18.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71125 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/gmime/Portfile
+++ b/dports/mail/gmime/Portfile
@@ -1,9 +1,10 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
 
 name		gmime
-version		2.4.11
+version		2.4.18
 set branch              [strsed ${version} {s/\.[0-9]*$//}]
 
 description	MIME mail utilities
@@ -17,9 +18,10 @@ categories	mail
 platforms	darwin
 homepage	http://spruce.sourceforge.net/gmime/
 master_sites    gnome:sources/${name}/${branch}
-checksums       md5     f459ab41e8104bfb62332cc4739ae64e \
-                sha1    7795a99005313114c1ac4219901aaeddc2dc6980 \
-                rmd160  8838a14f5a4598cd9f599ed9da97da83c2358c0f
+
+checksums       md5     489da5996e435410214dc613ba3d96df \
+                sha1    c39208f9d8af3a707b1bc7d4a1cd0c3387b7d125 \
+                rmd160  0df54a696a52a15037341a861f9d53840ebb50cd
 
 depends_build   path:bin/pkg-config:pkgconfig
 depends_lib     port:libiconv \
