totem-pl-parser: update to version 2.30.2.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71126 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/totem-pl-parser/Portfile
+++ b/dports/gnome/totem-pl-parser/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            totem-pl-parser
-version         2.26.3
+version         2.30.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      gnome
 maintainers     devans openmaintainer
@@ -17,28 +17,18 @@ homepage        http://live.gnome.org/Totem
 platforms       darwin
 master_sites    gnome:sources/${name}/${branch}/
 
-patchfiles      patch-configure.in.diff
-
-post-patch {
-    # http://bugzilla.gnome.org/show_bug.cgi?id=578358
-    reinplace "s:libtotem_glibc_la_SOURCES =:libtotem_glibc_la_SOURCES = stub.c:" ${worksrcpath}/lib/Makefile.am
-    copy ${filespath}/stub.c ${worksrcpath}/lib/stub.c
-}
-
-checksums       md5     e1a7ca9937d5dc07af6e5ca6ae0297d9 \
-                sha1    f2290f3ef3bc4995af9a92139a39e2178d09daa2 \
-                rmd160  d49b38924fcd5e07a1ecf253e5c748513308cd7b
+checksums       md5     c616536b9d7af21bbb16363eec0ec8a5 \
+                sha1    f53cf95e1623a4707aec8aee331a3743efd7e4c8 \
+                rmd160  a492106887205011df6e5672c79494d53081217e
 
 use_bzip2       yes
 
 depends_build   port:pkgconfig \
                 port:gtk-doc
 
-depends_lib     port:evolution-data-server
-
-
-use_autoreconf  yes
-autoreconf.args -fvi
+depends_lib     port:libsoup \
+                port:gmime \
+                port:gobject-introspection
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
