don't set archflags as f2py needs unset LDFLAGS (closes #26241)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71127 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-pymc/Portfile
+++ b/dports/python/py26-pymc/Portfile
@@ -30,6 +30,7 @@ checksums           md5     fc24deb12a72903832c450a913264603 \
 
 patchfiles-append   patch-pymc-gibbsit.f.diff
 depends_lib-append  port:py26-numpy
+python.add_archflags no
 
 variant gcc42 description {create Fortran wrappers using gcc42} conflicts gcc43 gcc44 g95 {
     depends_lib-append    port:gcc42
