totem: update to version 2.30.2, xine-lib no longer supported, use python26.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71129 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/totem/Portfile
+++ b/dports/gnome/totem/Portfile
@@ -4,14 +4,13 @@
 PortSystem      1.0
 
 name            totem
-version         2.26.3
-revision        1
+version         2.30.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      gnome
 maintainers     devans openmaintainer
 description     Official movie player of the GNOME desktop environment
 long_description \
-        Totem is based on xine-lib or GStreamer. It features a \
+        Totem is based on GStreamer. It features a \
         playlist, a full-screen mode, seek and volume controls, \
         as well as keyboard navigation. It comes with added \
         functionality such as: \
@@ -25,15 +24,16 @@ homepage        http://live.gnome.org/Totem
 platforms       darwin
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums      md5     f8f7390f5d93268cd200086a1b4f765a \
-               sha1    ea6fa7244eb993a3038bc76f5e561c8a0661466c \
-               rmd160  f265ec3997c130f28bf5e5455c0aef6921e71ece
+checksums       md5     4ff658d6178fdb57f310c54daf596de7 \
+                sha1    78b59e0e61a620718b2e87c82046ea1f1fe4607d \
+                rmd160  78ab8d58eb8e0349190042c34434c3ce8ac8f3e0
 
 use_bzip2       yes
 
-patchfiles      patch-bindings-python-totem.override.diff \
+patchfiles      patch-configure.diff \
                 patch-src-plugins-totem-python-module.c.diff \
-                patch-src-backend-Makefile.in.diff
+                patch-bindings-python-totem.override.diff \
+                patch-browser-plugin-totemPlugin.cpp.diff
 
 depends_build   port:pkgconfig \
                 port:intltool \
@@ -42,41 +42,45 @@ depends_build   port:pkgconfig \
                 port:gtk-doc
 
 depends_lib     port:gconf \
+                port:libgdata \
                 port:totem-pl-parser \
                 port:xorg-libXtst \
                 port:xorg-libXxf86vm \
-                port:py25-gtk \
+                port:py26-gtk \
                 port:gst-plugins-good \
                 port:gst-plugins-bad \
                 port:gst-plugins-ugly \
                 port:gst-ffmpeg \
                 port:nautilus
 
-configure.python  ${prefix}/bin/python2.5
+depends_run     port:gnome-settings-daemon
 
-configure.args  --with-plugins="thumbnail screensaver ontop gromit media-player-keys properties sidebar-test skipto youtube pythonconsole" \
+configure.args  --with-plugins="thumbnail ontop gromit media-player-keys properties sidebar-test skipto youtube pythonconsole dbus-service" \
                 --disable-static \
                 --enable-browser-plugins \
-                --enable-complex-plugin \
                 --enable-easy-codec-installation \
                 --enable-nautilus \
+                --disable-vala \
                 --disable-schemas-install \
                 --disable-scrollkeeper \
                 --x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib \
                 BROWSER_PLUGIN_DIR=${prefix}/lib/nsplugins
 
-variant xine description {Use xine-lib instead of gstreamer} {
-    depends_lib-delete port:gst-plugins-good
-    depends_lib-append port:xine-lib
-    configure.args-append --enable-xine
-    configure.args-delete --enable-easy-codec-installation
-    configure.args-append --disable-easy-codec-installation
-}
+set python_prefix          ${frameworks_dir}/Python.framework/Versions/2.6
+configure.python           ${prefix}/bin/python2.6
+configure.pkg_config_path  ${python_prefix}/lib/pkgconfig
+configure.env              PATH=${python_prefix}/bin:$env(PATH)
 
 post-patch {
     reinplace "s:libdbus-glib-1.so.2:${prefix}/lib/libdbus-glib-1.2.dylib:" ${worksrcpath}/browser-plugin/totemPluginGlue.cpp
 }
+
+#
+# atlas is not universal
+#
+
+universal_variant no
 
 post-destroot {
     eval delete [glob "${destroot}${prefix}/lib/nsplugins/*.la"]
