gnome-pthon-desktop: update to version 2.30.2, configure for python26, fix devhelp API docs.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71130 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-python-desktop/Portfile
+++ b/dports/gnome/gnome-python-desktop/Portfile
@@ -4,7 +4,7 @@
 PortSystem	1.0
 
 name            gnome-python-desktop
-version         2.26.0
+version         2.30.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      gnome python
 maintainers     devans openmaintainer
@@ -14,14 +14,13 @@ platforms       darwin
 homepage        http://www.pygtk.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     fbcf4ef5ec4a8c4eec4d390c5889c80f \
-                sha1    9f30c470ea73cb11b1daa6e10f1e980ec5698086 \
-                rmd160  dda34b9fe39567d591f654af9a9c9f6dab5f9a15
+checksums       md5     b90f6e96a6321e7bf859f6faff2aa4df \
+                sha1    75f41e1832baf37e332ee1e10b29a82b1809b6ef \
+                rmd160  8b46fbe26e3fa0a9eae3dbd3ff31fb910fb6b135
 
 use_bzip2       yes
 
-depends_lib	port:py25-gtk \
-                port:py25-cairo \
+depends_lib	port:py26-gtk \
                 port:gtksourceview \
                 port:libgtop \
                 port:gnome-media \
@@ -31,13 +30,20 @@ depends_lib	port:py25-gtk \
                 port:bug-buddy \
                 port:totem-pl-parser
 
-# TODO  port:nautilus-cd-burner
+patchfiles      patch-configure.diff
 
 configure.args 	--enable-metacity \
                 --disable-nautilusburn
 
-configure.python ${prefix}/bin/python2.5
-configure.pkg_config_path  ${prefix}/Library/Frameworks/Python.framework/Versions/2.5/lib/pkgconfig
+set python_prefix          ${frameworks_dir}/Python.framework/Versions/2.6
+
+configure.pre_args-delete  --prefix=${prefix}
+configure.pre_args-append  --prefix=${python_prefix}
+configure.args-append      --includedir=${python_prefix}/include/python2.6
+
+configure.python          ${prefix}/bin/python2.6
+configure.env             PATH=${python_prefix}/bin:$env(PATH)
+configure.pkg_config_path ${python_prefix}/lib/pkgconfig
 
 platform darwin 9 {
     post-patch {
@@ -55,6 +61,20 @@ platform darwin 9 {
             ${worksrcpath}/rsvg/Makefile.in \
             ${worksrcpath}/totem/Makefile.in \
             ${worksrcpath}/wnck/Makefile.in
+    }
+}
+
+post-destroot {
+    set docdir ${prefix}/share/doc/${name}
+    xinstall -d ${destroot}${docdir}
+    xinstall -m 0644 -W ${worksrcpath} AUTHORS COPYING ChangeLog NEWS README \
+        ${destroot}${docdir}
+    xinstall -d ${destroot}${prefix}/share/gtk-doc/html
+# devhelp requires gtk-doc directory name  and .devhelp file name (less the .devhelp) to match
+    foreach docname {pygnomeprint pygnomeprintui pygtksourceview} {
+        file rename ${destroot}${python_prefix}/share/gtk-doc/html/${docname}/${docname}.devhelp \
+                    ${destroot}${python_prefix}/share/gtk-doc/html/${docname}/${docname}26.devhelp 
+        ln -s ${python_prefix}/share/gtk-doc/html/${docname} ${destroot}${prefix}/share/gtk-doc/html/${docname}26
     }
 }
 
