--- a/dports/gnome/gnome-mag/Portfile
+++ b/dports/gnome/gnome-mag/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		gnome-mag
-version         0.15.9
+version         0.16.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	GNOME magnifier.
 long_description       ${description}
@@ -14,22 +14,20 @@ platforms	darwin
 homepage	http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     db651bbd63f4ae3cfeb344c42f80d206 \
-                sha1    b04c6728f8998d476ce1cb39734e72ca02d68bf5 \
-                rmd160  b246e5d3eb8d2817287f7a54d10d3e17f7e24550
+checksums       md5     bbe177dadfd64c071b5670956ed703ae \
+                sha1    a7629cf9ce7c8a065de806c8fb7bd7f536a1d647 \
+                rmd160  be70383eb4321478cd72b56f8ae0f22aa74e8bad
 
 depends_build   port:pkgconfig \
                 port:intltool \
-                port:p5-xml-parser \
                 port:gnome-doc-utils \
 
 depends_lib     port:at-spi \
-                port:gconf \
-                port:libbonobo \
-                port:xorg-libXdamage \
-                port:xorg-libXcomposite
+                port:gconf
 
 use_bzip2 	yes
+
+patchfiles      patch-configure.diff
 
 configure.args  --enable-colorblind-applet=no \
                 --disable-schemas-install \
@@ -37,10 +35,14 @@ configure.args  --enable-colorblind-applet=no \
                 --x-libraries=${prefix}/lib
 
 variant colorblind description {Enable building of colorblind applet} {
-                depends_lib-append port:libcolorblind
-                depends_lib-append port:py25-gnome
-                configure.args-delete --enable-colorblind-applet=no
-                configure.python ${prefix}/bin/python2.5
+                depends_lib-append        port:libcolorblind \
+                                          port:py26-gnome \
+                                          port:gnome-python-desktop
+                configure.args-delete     --enable-colorblind-applet=no
+                configure.python          ${prefix}/bin/python2.6
+                set python_framework      ${frameworks_dir}/Python.framework/Versions/2.6
+                configure.pkg_config_path ${python_framework}/lib/pkgconfig
+                configure.env             PATH=${python_framework}/bin:$env(PATH)
 }
 
 post-activate {
@@ -48,7 +50,6 @@ post-activate {
         system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
             gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
-
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
