Ghostscript 9.00rc2  - http://ghostscript.com/pipermail/gs-devel/2010-September/008803.html
git-svn-id: https://svn.macports.org/repository/macports/trunk@71133 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/ghostscript/Portfile
+++ b/dports/print/ghostscript/Portfile
@@ -5,8 +5,8 @@ PortGroup       muniversal 1.0
 
 name            ghostscript
 version         9.00
-set version_sub rc1
-revision        1
+set version_sub rc2
+revision        2
 categories      print
 maintainers     takanori openmaintainer
 description     GPL Ghostscript, An interpreter for PostScript and PDF
@@ -20,14 +20,15 @@ master_sites    http://ghostscript.com/~chrisl/:source \
                 sourceforge:gs-fonts:fonts \
                 macports:pTeX:misc
 #               sourceforge:${name}:source
-distfiles       ${distname}${version_sub}.tar.gz:source \
+distname        ${name}-${version}${version_sub}
+distfiles       ${distname}.tar.gz:source \
                 ghostscript-fonts-other-6.0.tar.gz:fonts \
                 mappingresources4pdf_2unicode-20091208.tar.Z:misc \
                 mappingresources4pdf_other-20091208.tar.Z:misc
 patchfiles      patch-base_unix-dll.mak.diff \
                 patch-base_stdpre.h.diff \
                 patch-base_unixinst.mak.diff
-checksums       ${distname}${version_sub}.tar.gz rmd160 5ed89f680b7f5faa2b5fe207a87ee62a41a79581 \
+checksums       ${distname}.tar.gz rmd160 c49ff07dc9b5c07f8500bfea3fbf6c4bfd56a369 \
                 ghostscript-fonts-other-6.0.tar.gz rmd160 ab60dbf71e7d91283a106c3df381cadfe173082f \
                 mappingresources4pdf_2unicode-20091208.tar.Z rmd160 bc1b86e6a5f0e022f88070195eb3e01e167114a7 \
                 mappingresources4pdf_other-20091208.tar.Z    rmd160 1e2ea9af6be8b60c9a54963e542fa06ceb2daccd
