--- a/dports/graphics/freeimage/Portfile
+++ b/dports/graphics/freeimage/Portfile
@@ -1,31 +1,33 @@
-# -*- tcl -*-
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
+PortSystem          1.0
 
-name            freeimage
-version         3.13.1
-license         FreeImage-1.0 GPL-2
-categories      graphics
-maintainers     nomaintainer
-description     Library for FreeImage, a dependency-less graphics library
-long_description \
-    FreeImage is a library for developers who would like to \
-    support most popular graphics image formats. Some \
-    highlights are: extremely simple in use, not limited to \
-    the local PC (unique FreeImageIO) and Plugin driven!
-platforms       macosx
-homepage        http://freeimage.sourceforge.net/
-master_sites    sourceforge
-distname        FreeImage[strsed ${version} {g/\.//}]
-use_zip         yes
-worksrcdir      FreeImage
+name                freeimage
+version             3.13.1
+license             FreeImage-1.0 GPL-2
+categories          graphics
+platforms           macosx
 
-checksums       md5     a2e20b223a2cf6a5791cc47686364e99 \
-                sha1    52ba4453aa9682c57104c3420e58f843aaa6ab61 \
-                rmd160  b3f3e7791ded7d3ce76eb2d9c2a5acb5687a16ee
+maintainers         nomaintainer
 
-patchfiles      patch-Makefile.gnu.diff
+description         Library for FreeImage, a dependency-less graphics library
+long_description    FreeImage is a library for developers who would like to \
+                    support most popular graphics image formats. Some \
+                    highlights are: extremely simple in use, not limited to \
+                    the local PC (unique FreeImageIO) and Plugin driven!
+
+homepage            http://freeimage.sourceforge.net/
+master_sites        sourceforge
+distname            FreeImage[strsed ${version} {g/\.//}]
+use_zip             yes
+worksrcdir          FreeImage
+
+checksums           md5     a2e20b223a2cf6a5791cc47686364e99 \
+                    sha1    52ba4453aa9682c57104c3420e58f843aaa6ab61 \
+                    rmd160  b3f3e7791ded7d3ce76eb2d9c2a5acb5687a16ee
+
+patchfiles          patch-Makefile.gnu.diff
 
 post-patch {
     # Libraries extension is ".dylib" on Darwin, not ".so"
@@ -41,17 +43,17 @@ post-patch {
     reinplace {s/-o root -g root//} ${worksrcpath}/Makefile.gnu
 }
 
-use_configure   no
+use_configure       no
 
 set CC "${configure.cc} ${configure.cflags}"
 set CXX "${configure.cxx} ${configure.cxxflags}"
 set LDFLAGS ${configure.ldflags}
 set VERLIBNAME libfreeimage.[lindex [split ${version} .] 0].dylib
 
-build.target    FreeImage
-build.args      -f Makefile.gnu \
-                PREFIX=${prefix} \
-                VERLIBNAME=${VERLIBNAME}
+build.target        FreeImage
+build.args          -f Makefile.gnu \
+                    PREFIX=${prefix} \
+                    VERLIBNAME=${VERLIBNAME}
 
 pre-build {
     build.args-append \
@@ -60,11 +62,11 @@ pre-build {
         LDFLAGS="${LDFLAGS}"
 }
 
-destroot.args   -f Makefile.gnu \
-                INCDIR=${destroot}${prefix}/include \
-                INSTALLDIR=${destroot}${prefix}/lib \
-                PREFIX=${prefix} \
-                VERLIBNAME=${VERLIBNAME}
+destroot.args       -f Makefile.gnu \
+                    INCDIR=${destroot}${prefix}/include \
+                    INSTALLDIR=${destroot}${prefix}/lib \
+                    PREFIX=${prefix} \
+                    VERLIBNAME=${VERLIBNAME}
 
 post-destroot {
     set docdir ${prefix}/share/doc/${name}
@@ -74,9 +76,9 @@ post-destroot {
     copy ${worksrcpath}/Examples ${destroot}${docdir}/examples
 }
 
-test.run    yes
-test.cmd    ./testAPI
-test.dir    ${worksrcpath}/TestAPI
+test.run            yes
+test.cmd            ./testAPI
+test.dir            ${worksrcpath}/TestAPI
 test.target
 
 pre-test {
@@ -97,5 +99,5 @@ variant universal {
     append LDFLAGS " ${configure.universal_ldflags}"
 }
 
-livecheck.type  regex
-livecheck.regex {FreeImage (\d+(?:\.\d+)*) released}
+livecheck.type      regex
+livecheck.regex     {FreeImage (\d+(?:\.\d+)*) released}
