Fix archcheck for libusb-legacy.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71141 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/usrp/Portfile
+++ b/dports/science/usrp/Portfile
@@ -73,11 +73,7 @@ if { ![variant_isset python25] && \
 variant libusb-legacy \
 description "Use LIBUSB legacy version for USB transport" {
     depends_lib-append     port:libusb-legacy
-    archcheck.files-append [exec find ${prefix}/lib/libusb-legacy \
-                                -name "libusb*.dylib" -type f | \
-                                grep -v pp | \
-                                sed -e "s@${prefix}/@@g"]
-
+    archcheck.files-append lib/libusb-legacy/libusb-legacy.dylib
     # fix LIBUSB search to include 'usb_debug' symbol, so-as
     # to avoid using the 'compat' library.
     patchfiles      patch-configure-libusb.diff
