Correct variant names to make 'port lint' happy.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71142 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/usrp/Portfile
+++ b/dports/science/usrp/Portfile
@@ -70,7 +70,7 @@ if { ![variant_isset python25] && \
     default_variants +python26
 }
 
-variant libusb-legacy \
+variant libusb_legacy \
 description "Use LIBUSB legacy version for USB transport" {
     depends_lib-append     port:libusb-legacy
     archcheck.files-append lib/libusb-legacy/libusb-legacy.dylib
@@ -79,7 +79,7 @@ description "Use LIBUSB legacy version for USB transport" {
     patchfiles      patch-configure-libusb.diff
 }
 
-variant libusb-1 \
+variant libusb_1 \
 description "Use LIBUSB version 1.0 for USB transport" {
     depends_lib-append     port:libusb
     archcheck.files-append lib/libusb-1.0.dylib
