Correct variant names in default check.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71144 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/usrp/Portfile
+++ b/dports/science/usrp/Portfile
@@ -86,7 +86,7 @@ description "Use LIBUSB version 1.0 for USB transport" {
     configure.args-append  --with-fusb-tech=libusb1
 }
 
-if { ![variant_isset libusb-legacy] && \
-     ![variant_isset libusb-1] } {
-    default_variants +libusb-legacy
+if { ![variant_isset libusb_legacy] && \
+     ![variant_isset libusb_1] } {
+    default_variants +libusb_legacy
 }
