update py2app homepage
git-svn-id: https://svn.macports.org/repository/macports/trunk@71146 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py-py2app-devel/Portfile
+++ b/dports/python/py-py2app-devel/Portfile
@@ -17,7 +17,7 @@ long_description \
 
 platforms           darwin
 
-homepage            http://undefined.org/python/#py2app
+homepage            http://wiki.python.org/moin/MacPython/py2app
 
 fetch.type          svn
 svn.url             http://svn.pythonmac.org/py2app/py2app/trunk/
