--- a/dports/python/py-py2app/Portfile
+++ b/dports/python/py-py2app/Portfile
@@ -15,7 +15,7 @@ long_description \
 
 platforms		darwin
 
-homepage		http://undefined.org/python/#py2app
+homepage		http://wiki.python.org/moin/MacPython/py2app
 master_sites		http://cheeseshop.python.org/packages/source/p/py2app/
 distname		py2app-${version}
 
