--- a/dports/python/py26-py2app-devel/Portfile
+++ b/dports/python/py26-py2app-devel/Portfile
@@ -17,7 +17,7 @@ long_description \
 
 platforms           darwin
 
-homepage            http://undefined.org/python/#py2app
+homepage            http://wiki.python.org/moin/MacPython/py2app
 
 fetch.type          svn
 svn.url             http://svn.pythonmac.org/py2app/py2app/trunk/
