--- a/dports/python/py27-py2app/Portfile
+++ b/dports/python/py27-py2app/Portfile
@@ -17,7 +17,7 @@ long_description \
 
 platforms           darwin
 
-homepage            http://undefined.org/python/#py2app
+homepage            http://wiki.python.org/moin/MacPython/py2app
 master_sites        http://pypi.python.org/packages/source/p/py2app/
 distname            py2app-${version}
 
