alienarena: fix game.dylib's install_name, just for fun
git-svn-id: https://svn.macports.org/repository/macports/trunk@71150 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/alienarena/Portfile
+++ b/dports/games/alienarena/Portfile
@@ -6,6 +6,7 @@ PortSystem              1.0
 name                    alienarena
 # Keep version in sync between alienarena and alienarena-data.
 version                 7.45-20100726
+revision                1
 set version_number      [lindex [split ${version} -] 0]
 set version_date        [lindex [split ${version} -] 1]
 categories              games
