alienarena: add notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@71151 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/alienarena/Portfile
+++ b/dports/games/alienarena/Portfile
@@ -101,3 +101,9 @@ destroot {
     xinstall -d ${destroot}${prefix}/share/${name}
     copy ${worksrcpath}/arena ${worksrcpath}/data1 ${destroot}${prefix}/share/${name}
 }
+
+notes "
+To play Alien Arena, type:
+
+crx
+"
