alienarena, alienarena-data: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@71152 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/alienarena-data/Portfile
+++ b/dports/games/alienarena-data/Portfile
@@ -48,3 +48,8 @@ destroot {
     xinstall -d ${destroot}${prefix}/share/alienarena
     copy ${worksrcpath}/data1 ${destroot}${prefix}/share/alienarena
 }
+
+livecheck.version       ${version_number}
+livecheck.type          regex
+livecheck.url           ${homepage}aquire.html
+livecheck.regex         {Alien Arena ([0-9.]+)}
