--- a/dports/games/alienarena/Portfile
+++ b/dports/games/alienarena/Portfile
@@ -107,3 +107,8 @@ To play Alien Arena, type:
 
 crx
 "
+
+livecheck.version       ${version_number}
+livecheck.type          regex
+livecheck.url           ${homepage}aquire.html
+livecheck.regex         {Alien Arena ([0-9.]+)}
