--- a/dports/games/alienarena-data/Portfile
+++ b/dports/games/alienarena-data/Portfile
@@ -15,8 +15,7 @@ license                 GPL-2+
 supported_archs         noarch
 
 homepage                http://icculus.org/alienarena/rpa/
-master_sites            http://icculus.org/alienarena/Files/ \
-                        http://mirror.arcadepro.org/
+master_sites            http://icculus.org/alienarena/Files/
 
 dist_subdir             alienarena
 worksrcdir              alienarena[join [split ${version_number} .] _]
