--- a/dports/games/alienarena/Portfile
+++ b/dports/games/alienarena/Portfile
@@ -15,8 +15,7 @@ maintainers             ryandesign
 license                 GPL-2+
 
 homepage                http://icculus.org/alienarena/rpa/
-master_sites            http://icculus.org/alienarena/Files/ \
-                        http://mirror.arcadepro.org/
+master_sites            http://icculus.org/alienarena/Files/
 
 worksrcdir              alienarena[join [split ${version_number} .] _]
 distname                ${worksrcdir}-Linux${version_date}
