update: py2[56]-llvm; trivial version bump
git-svn-id: https://svn.macports.org/repository/macports/trunk@71155 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-llvm/Portfile
+++ b/dports/python/py26-llvm/Portfile
@@ -2,14 +2,14 @@
 # $Id$
 
 PortSystem      1.0
-PortGroup       python25 1.0
+PortGroup       python26 1.0
 
 # Note: py-llvm-0.6 must use llvm-2.7!
 
-name            py25-llvm
+name            py26-llvm
 version         0.6
 categories      python
-maintainers     snc openmaintainer
+maintainers     adfernandes openmaintainer
 platforms       darwin
 description     Python bindings for LLVM
 long_description    ${description}
