update: py2[56]-biopython; trivial version bump
git-svn-id: https://svn.macports.org/repository/macports/trunk@71157 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-biopython/Portfile
+++ b/dports/python/py26-biopython/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 PortGroup python26 1.0
 
 name			py26-biopython
-version			1.54
+version			1.55
 categories		python science
 maintainers		mmoll openmaintainer
 platforms		darwin
@@ -17,7 +17,9 @@ long_description	python tools for computational molecular biology: \
 homepage		http://www.biopython.org/
 master_sites	${homepage}/DIST
 distname		biopython-${version}
-checksums       sha1    db23fd12efec2931fdbfac4b85854212f897ab53
+checksums       md5     608f5d33a6f8967ba52c954e567ee6d6 \
+                sha1    a3cc0efe0d3254ab612b870c5909660694c30b65 \
+                rmd160  df5eba77d2da622fd7e9f903f8856e9e553c00f9
 
 depends_lib-append	port:py26-numpy \
 				port:py26-reportlab
