alienarena: more optimized round_page implementation
git-svn-id: https://svn.macports.org/repository/macports/trunk@71158 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/alienarena/Portfile
+++ b/dports/games/alienarena/Portfile
@@ -6,7 +6,7 @@ PortSystem              1.0
 name                    alienarena
 # Keep version in sync between alienarena and alienarena-data.
 version                 7.45-20100726
-revision                1
+revision                2
 set version_number      [lindex [split ${version} -] 0]
 set version_date        [lindex [split ${version} -] 1]
 categories              games
@@ -47,8 +47,11 @@ patch.dir               ${worksrcpath}/source
 
 post-extract {
     # DOS to UNIX line endings so we can patch properly.
-    reinplace "s|\r||g" ${patch.dir}/game/q_shared.h \
-                        ${patch.dir}/ref_gl/r_main.c
+    reinplace "s|\r||g" ${patch.dir}/client/cl_main.c \
+                        ${patch.dir}/game/q_shared.h \
+                        ${patch.dir}/qcommon/common.c \
+                        ${patch.dir}/ref_gl/r_main.c \
+                        ${patch.dir}/ref_gl/r_model.h
 }
 
 patchfiles              patch-game-q_shared.h.diff \
@@ -58,9 +61,12 @@ use_configure           no
 
 platform darwin {
     patchfiles-append   patch-Makefile.diff \
+                        patch-client-cl_main.c.diff \
                         patch-client-qal.h.diff \
                         patch-client-snd_openal.c.diff \
+                        patch-qcommon-common.c.diff \
                         patch-ref_gl-r_main.c.diff \
+                        patch-ref_gl-r_model.h.diff \
                         patch-unix-qal_unix.c.diff \
                         patch-unix-sys_unix.c.diff
     post-patch {
