alienarena, alienarena-data: add gentoo mirrors
git-svn-id: https://svn.macports.org/repository/macports/trunk@71160 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/alienarena-data/Portfile
+++ b/dports/games/alienarena-data/Portfile
@@ -15,7 +15,8 @@ license                 GPL-2+
 supported_archs         noarch
 
 homepage                http://icculus.org/alienarena/rpa/
-master_sites            http://icculus.org/alienarena/Files/
+master_sites            http://icculus.org/alienarena/Files/ \
+                        gentoo
 
 dist_subdir             alienarena
 worksrcdir              alienarena[join [split ${version_number} .] _]
