--- a/dports/games/alienarena/Portfile
+++ b/dports/games/alienarena/Portfile
@@ -15,7 +15,8 @@ maintainers             ryandesign
 license                 GPL-2+
 
 homepage                http://icculus.org/alienarena/rpa/
-master_sites            http://icculus.org/alienarena/Files/
+master_sites            http://icculus.org/alienarena/Files/ \
+                        gentoo
 
 worksrcdir              alienarena[join [split ${version_number} .] _]
 distname                ${worksrcdir}-Linux${version_date}
